# advent_of_code_traits

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: github-actions.yml
examples/: README.md  parse_each_input.rs  parse_input_once.rs  without_parsing.rs
examples/boilerplate/: Cargo.toml  README.md
examples/boilerplate/2020/: day2.txt
examples/boilerplate/src/: day1.rs  lib.rs  main.rs
examples/cli/: README.md  day01.rs  day02.rs  day03.rs  day1.rs  main.rs
src/: days.rs  lib.rs  parts.rs  specialization.rs  version2.rs
